# tag

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix  justfile
core/: Cargo.toml
core/src/: lib.rs  tag.rs
demo/imdb-browser/: Cargo.toml  Dioxus.toml  justfile
demo/imdb-browser/data/: .gitignore  README.md
demo/imdb-browser/public/css/: tailwind.css
demo/imdb-browser/src/: app.rs  main.rs
demo/imdb-browser/src/pages/: home.rs
demo/imdb-browser/static/: Cargo.toml  build.rs
demo/imdb-importer/: Cargo.toml  justfile
demo/imdb-importer/data/: justfile  title.2000.id.txt
demo/imdb-importer/src/: args.rs  lib.rs  main.rs
demo/imdb-importer/src/import/: basic_titles.rs  mod.rs  name.rs  principal.rs  title.rs  utils.rs
demo/imdb-importer/src/parse/: basic_titles.rs  mod.rs  name.rs  principal.rs  title.rs  utils.rs
model/: Cargo.toml  justfile
model/src/: item.rs  lib.rs  tag.rs  volume.rs
model/src/arc/: item.rs  loader.rs  mod.rs  tag.rs  volume.rs
proto/: .gitignore  Cargo.toml  justfile
proto/src/: indexmap.rs  lib.rs  map.rs  misc.rs  tag.rs  tags.rs  val.rs  vec.rs
proto/src/serde/: map.rs  mod.rs  val.rs
