[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/tag"
repository = "https://github.com/edger-dev-tag"

[workspace]
members = [
    "core",
    "model",
]
exclude = [
    "demo/imdb-importer",
    "demo/imdb-browser",
    "demo/imdb-browser/static",
    "external/*",
]

[workspace.dependencies]
tag_core = { path = "core", version = "0.1.0" }
tag_model = { path = "model", version = "0.1.0" }

edger_tree = { path = "../crates/common/tree" }

dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-router = "0.3.0"
dioxus-ssr = "0.3.0"
fermi = "0.3.0"

# demo

dioxus-class = "0.3.0"
dioxus-tailwindcss = "0.3.0"
dioxus-daisyui = "0.3.0"

lazy_static = "1.4.0"
simsearch = "0.2.4"

clap = { version = "4.1.14", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

uuid = { version = "1.3", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
derive_builder = "0.12.0"
downcast-rs = "1.2.0"

serde = { version = "1.0.162", features = ["derive", "alloc"] }
serde_json = { version = "1.0.96" }
typetag = "0.2.12"

csv = "1.2.1"
surrealdb = { path = "external/surrealdb/lib" }
num_cpus = "1.15.0"

indexmap = { version = "2.0.0" }
dashmap = { version = "5.5.0" }
secrecy = { version = "0.8.0" }
snafu = "0.7.4"
async-trait = "0.1.64"
blake3 = { version = "1.3.3", features = [ "rayon" ]}