[package]
publish = false
name = "tag_proto"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = [
    "dep:serde",
    "typetag",
    "uuid/serde",
    "indexmap/serde",
]

[dependencies]
tag_core = { workspace = true }

uuid = { workspace = true }
indexmap = { workspace = true }
downcast-rs = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true, optional = true }
typetag = { workspace = true, optional = true }