[package]
publish = false
version = "0.1.0"
name = "imdb-browser"

# Can NOT use workspace values, dioxus-cli does not understand workspace package values
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
dioxus-web = { workspace = true }
dioxus-router = { workspace = true }
dioxus-ssr = { workspace = true }
fermi = { workspace = true }

dioxus-daisyui = { workspace = true }

lazy_static = { workspace = true }
simsearch = { workspace = true }

