[package]
publish = false
version = "0.1.0"
name = "imdb-importer"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
csv = { workspace = true }
datafusion = { workspace = true }
surrealdb = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }