[package]
publish = false
version = "0.1.0"
name = "imdb-browser-static"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
dioxus-daisyui = { workspace = true }
imdb-browser = { path = ".." }

